build: ensure unsafe memory access is possible